# music

./: .editorconfig  .env.example  .gitignore  .gitmodules  .version_compatibility  0、install pwsh.sh  1、install-uv-qinglong.ps1  2、run_gradio.ps1  3、run_server.ps1  4、run_npmgui.ps1  INTEGRATED_PROJECT.md  INTEGRATION_PLAN.md  PROJECT_DEVELOPMENT_GUIDE.md  PROJECT_STRUCTURE.md  PYTHON_VERSION_GUIDE.md  README.md  ace-step-launcher.ps1  ace-step-ui-launcher.ps1  build-correct.py  build-new-version.py  build-only-no-git.py  build-only.py  build-release.py  build-version.py  check_api_status.py  check_autolabel.py  check_config.py  check_llm_detailed.py  check_llm_status.py  check_logs.py  check_task_status.py  check_update.bat  check_update.sh  cli.py  close_api_server.sh  config.txt  convert-png-to-ico.ps1  create-launcher-with-model-download.ps1  create-sfx.ps1  create-v29-launcher.ps1  (+92 more)
.ai-context/: FILE_INDEX.md  KNOWLEDGE_GRAPH.md  QUICKSTART.md  README.md
.compatibility_backup_20260329_044013/: structure.json
.compatibility_backup_20260329_053203/: structure.json
.githooks/: pre-push
.github/: codeql-config.yml  copilot-instructions.md
ace-step-ui/: App.tsx  I18N_USAGE.md  index.html  metadata.json  setup.sh  types.ts
acestep/: audio_utils.py  dataset_handler.py  inference.py  local_cache.py  (+2 more)
dev/app/acestep/third_parts/nano-vllm/: pyproject.toml
dev/app/acestep/third_parts/nano-vllm/nanovllm/engine/: block_manager.py
dev/app/acestep/third_parts/nano-vllm/nanovllm/layers/: attention.py
dev/app/acestep/third_parts/nano-vllm/nanovllm/utils/: loader.py
(+693 files in other folders)
