[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = {text = "MIT"}
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    # Triton and Flash Attention are optional on ROCm (Python 3.12) - SDPA fallback used instead
    "triton-windows>=3.0.0,<3.5; sys_platform == 'win32' and python_version == '3.12'",
    "triton>=3.0.0; sys_platform == 'linux' and python_version == '3.12'",
    "transformers>=4.51.0",
    "flash-attn @ file:///${PROJECT_ROOT}/flash_attn-2.8.3+cu128torch2.9.0cxx11abiTRUE-cp312-cp312-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.12' and platform_machine == 'AMD64'",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/GeeeekExplorer/nano-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]
